--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,9 @@ authors = ["Maik Klein <maikklein@googlemail.com>"]
 rustc = {path = "compiler/rust/src/librustc"}
 rustc_driver = {path = "compiler/rust/src/librustc_driver"}
 syntax = {path = "compiler/rust/src/libsyntax"}
+syntax_pos = {path = "compiler/rust/src/libsyntax_pos"}
 
 
 [dependencies]
 #getopts = "*"
+debugit = "*"
