--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,12 @@ rustc = {path = "compiler/rust/src/librustc"}
 rustc_driver = {path = "compiler/rust/src/librustc_driver"}
 syntax = {path = "compiler/rust/src/libsyntax"}
 syntax_pos = {path = "compiler/rust/src/libsyntax_pos"}
+rustc_passes = {path = "compiler/rust/src/librustc_passes"}
+rustc_mir = {path = "compiler/rust/src/librustc_mir"}
+rustc_plugin = {path = "compiler/rust/src/librustc_plugin"}
+arena = {path = "compiler/rust/src/libarena"}
+rustc_borrowck = {path = "compiler/rust/src/librustc_borrowck"}
+rustc_trans = {path = "compiler/rust/src/librustc_trans"}
 getopts = "0.2.14"
 env_logger = "0.4.3"
 
