--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ rustc_trans = {path = "compiler/rust/src/librustc_trans"}
 rustc_errors = {path = "compiler/rust/src/librustc_errors"}
 rustc_incremental = {path = "compiler/rust/src/librustc_incremental"}
 rustc_resolve = {path = "compiler/rust/src/librustc_resolve"}
+rustc_data_structures = {path = "compiler/rust/src/librustc_data_structures"}
 getopts = "0.2.14"
 env_logger = "0.4.3"
 
