--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,3 +29,6 @@ log = "*"
 debugit = "*"
 rspirv = {git = "https://github.com/google/rspirv.git", branch = "master" }
 spirv_headers = {git = "https://github.com/google/rspirv.git", branch = "master" }
+
+[features]
+llvm = ["rustc_driver/llvm"]
