--- a/rlsl-example/Cargo.toml
+++ b/rlsl-example/Cargo.toml
@@ -4,3 +4,6 @@ version = "0.1.0"
 authors = ["Maik Klein <maikklein@googlemail.com>"]
 
 [dependencies]
+
+rlsl-math = { path = "../rlsl-math" }
+generic-array = "0.9.0"
