--- a/issues/Cargo.toml
+++ b/issues/Cargo.toml
@@ -1,8 +1,7 @@
 [package]
-name = "shader"
+name = "issues"
 version = "0.1.0"
 authors = ["Maik Klein <maikklein@googlemail.com>"]
 
 [dependencies]
-rlsl-math = {path = "../../rlsl-math" }
-
+rlsl-math = {path = "../rlsl-math" }
