--- a/quad2/Cargo.toml
+++ b/quad2/Cargo.toml
@@ -7,6 +7,8 @@ build = "build.rs"
 [dependencies]
 winit = "0.11.1"
 image = "0.10.4"
-ash = "*"
+ash = {path = "/home/maik/projects/ash/ash"}
+clap = "*"
+structopt = "*"
 [target.'cfg(windows)'.dependencies]
 winapi = { version = "0.3.4", features = ["windef", "winuser"] }
