--- a/quad2/Cargo.toml
+++ b/quad2/Cargo.toml
@@ -10,8 +10,8 @@ image = "0.10.4"
 ash = {path = "/home/maik/projects/ash/ash"}
 clap = "*"
 structopt = "*"
-gfx-hal = {git = "https://github.com/gfx-rs/gfx.git"}
-gfx-backend-vulkan = {git = "https://github.com/gfx-rs/gfx.git"}
+gfx-hal = {git = "https://github.com/MaikKlein/gfx-rs"}
+gfx-backend-vulkan = {git = "https://github.com/MaikKlein/gfx-rs"}
 
 [target.'cfg(windows)'.dependencies]
 winapi = { version = "0.3.4", features = ["windef", "winuser"] }
