Add new merge find algroithm

--- a/rlsl/Cargo.toml
+++ b/rlsl/Cargo.toml
@@ -27,7 +27,8 @@ authors = ["Maik Klein <maikklein@googlemail.com>"]
 #getopts = "*"
 log = "*"
 debugit = "*"
-rspirv = "0.5.1"
+rspirv = "0.5"
 spirv_headers = "1.2"
 itertools = "*"
 byteorder = "1.2"
+petgraph = "0.4"
