--- a/rlsl-test/Cargo.toml
+++ b/rlsl-test/Cargo.toml
@@ -8,3 +8,4 @@ gfx-hal = {git = "https://github.com/MaikKlein/gfx-rs"}
 gfx-backend-vulkan = {git = "https://github.com/MaikKlein/gfx-rs"}
 issues = {path = "../issues"}
 quickcheck = "0.6"
+rlsl-test-macro = {path = "../rlsl-test-macro"}
