--- a/rlsl-test/Cargo.toml
+++ b/rlsl-test/Cargo.toml
@@ -2,6 +2,7 @@
 name = "rlsl-test"
 version = "0.1.0"
 authors = ["Maik Klein <maikklein@googlemail.com>"]
+edition = "2018"
 
 [dependencies]
 gfx-hal = {git = "https://github.com/MaikKlein/gfx-rs"}
