--- a/tools/Cargo.toml
+++ b/tools/Cargo.toml
@@ -2,5 +2,8 @@
 name = "tools"
 version = "0.1.0"
 authors = ["Maik Klein <maikklein@googlemail.com>"]
+edition = "2018"
 
 [dependencies]
+
+dirs = "1.0"
